# Obwiki

./: .gitignore  DESIGN.md  README.md  USER_GUIDE.md  docker-compose.yml  main.js  manifest.json  styles.css
api/: .env.example
api/data/: llmwiki.db
api/src/: config.py  main.py
api/src/routes/: files.py  jobs.py  kbs.py
api/src/services/: extractor.py  provider_service.py  templates.py
docker/: Dockerfile
docker/src/: db.py  deps.py  main.py  paths.py
docker/src/models/: __init__.py  job.py
docker/src/routes/: kbs.py  providers.py
docker/src/services/: community_gen.py  crystallizer.py  evolver.py  job_runner.py  kb_registry.py  llm.py  llm_providers.py  llm_utils.py  merge_detector.py  model_registry.py  organizer.py  parsers.py  scanner.py  scheduler.py  source_cleanup.py  source_registry.py  token_tracker.py  wiki_schema.py
mcp/: README.md  pyproject.toml
mcp/src/: server.py
mcp/src/llmwiki_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
plugin/: esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
plugin/docker/: pyproject.toml
plugin/docker/src/: main.py
plugin/docker/src/routes/: dashboard.py
plugin/docker/src/services/: linter.py
plugin/mcp/: pyproject.toml
plugin/src/: api-client.ts  main.ts  settings.ts
plugin/src/views/: llmwiki-view.ts  model-picker-modal.ts
